removed .coverage.docker and .coverage.integration since they are not being used at the moment

--- a/.github/actions/publish-coverage/action.yml
+++ b/.github/actions/publish-coverage/action.yml
@@ -14,7 +14,8 @@ runs:
         shell: bash
         run: |
             ls -la
-            coverage combine .coverage.unit .coverage.docker .coverage.integration
+            # coverage combine .coverage.unit .coverage.docker .coverage.integration
+            coverage combine .coverage.unit
 
       - name: Print coverage report
         shell: bash
