--- a/tests/unit/requirements-unit.txt
+++ b/tests/unit/requirements-unit.txt
@@ -2,6 +2,10 @@
 git+https://github.com/owasp-sbot/OSBot-Utils.git@dev
 python-dotenv
 
+# for OWSBot-AWS
+git+https://github.com/owasp-sbot/OSBot-AWS.git@dev
+boto3
+
 # for testing
 pytest
 coverage
